--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "App Name",
+  "name": "SharedPhotoFrame",
   "description": "App Description",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "dependencies": {
     "angular": "~1.2.20",
     "angular-route": "~1.2.20",
     "angular-touch": "~1.2.20",
-    "bootstrap": "~3.2.0",
-    "font-awesome": "~4.1.0"
+    "angular-animate": "~1.2.20",
+    "lodash": "~2.4.x"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
