--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,12 @@
   "description": "App Description",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "~1.2.20",
-    "angular-route": "~1.2.20",
-    "angular-touch": "~1.2.20",
-    "angular-animate": "~1.2.20",
-    "lodash": "~2.4.x"
+    "angular": "~1.2.25",
+    "angular-route": "~1.2.25",
+    "angular-touch": "~1.2.25",
+    "angular-animate": "~1.2.25",
+    "lodash": "~2.4.x",
+    "ngCordova": "latest"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
