--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,11 @@
   "description": "App Description",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "~1.2.25",
-    "angular-route": "~1.2.25",
-    "angular-touch": "~1.2.25",
-    "angular-animate": "~1.2.25",
+    "angular": "~1.2.26",
+    "angular-route": "~1.2.26",
+    "angular-touch": "~1.2.26",
+    "angular-animate": "~1.2.26",
+    "angular-translate": "~2.5.2",
     "lodash": "~2.4.x",
     "ngCordova": "latest",
     "stacktrace-js": "latest",
