--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "lodash": "~2.4.x",
     "ngCordova": "latest",
     "stacktrace-js": "latest",
-    "moment": "latest"
+    "moment": "latest",
+    "fastclick": "latest"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
