--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,10 @@
   "description": "App Description",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "~1.2.26",
-    "angular-route": "~1.2.26",
-    "angular-touch": "~1.2.26",
-    "angular-animate": "~1.2.26",
+    "angular": "~1.4.x",
+    "angular-route": "~1.4.x",
+    "angular-touch": "~1.4.x",
+    "angular-animate": "~1.4.x",
     "angular-translate": "~2.5.2",
     "lodash": "~2.4.x",
     "ngCordova": "latest",
@@ -15,6 +15,6 @@
     "fastclick": "latest"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.x"
+    "angular-mocks": "1.4.x"
   }
 }
