--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "dependencies": {
     "angular": "~1.4.x",
-    "angular-route": "~1.4.x",
     "angular-touch": "~1.4.x",
     "angular-animate": "~1.4.x",
     "angular-translate": "~2.5.2",
+    "angular-ui-router": "latest",
     "lodash": "~2.4.x",
     "ngCordova": "latest",
     "stacktrace-js": "latest",
